--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сайт web-студія "Web-DECO"</title>
 </head>
-<body>
-    
+<body background="images/bg.jpg">
+    <table border="1" align="center" cellpadding="10">
+        <tr>
+            <td colspan ="2" height="150" align="right">	
+                <img src ="images/logo.png"	height="140" width="140" alingn="right">		
+        <font color="Maroon"><h1 class="shadowtext">Сайт студії "Web-DECO"</h1> </h1></font>
+            </td>
+        <tr>
+            <td colspan="2">Gorizontal menu</td>
+        </tr>
+        <tr>
+            <td width="30%" valign="top">Left menu</td>
+            <td width="70%">Site's text</td>
+        </tr>
+        <tr>
+            <td colspan="2" valign="middle" height="90">Site's bottom</td>
+        </tr>
+    </table>
+  
 </body>
 </html>
