--- a/index.html
+++ b/index.html
@@ -22,9 +22,27 @@
         <tr>
             <td colspan="2" valign="middle" height="90">Site's bottom</td>
         </tr>
+    </td>
+</tr>
+<tr>
+    <td colspan="2">Gorizontal menu</td>
+    <td colspan="2">
+        <font size ="4">
+            <b>
+                <a href="#">Головна</a>
+                <a href="#">Фотогалерея</a>
+                <a href="#">Телефони</a>
+                <a href="#">Статистики</a>
+                <a href="#">Зареєстровані</a>
+            </b>
+        </font>
+    </td>
+</tr>
+<tr>
+    <td width="30%" valign="top">Left menu</td>
     </table>
   
 
-    
+
 </body>
 </html>
