--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
     <td width="70%">Site's text</td>
 </tr>
 <tr>
+    <td width="70%">Site's text</td>
+			</tr>
+			<tr>
+				<td colspan="2" valign="middle" height="90">Site's bottom</td>
+				<td colspan="2" valign="middle" height="90">
+					<font size="4">
+						Сайт розробила Масовець Вероніка
+					</font>
+				</td>
+			</tr>
+		</table>
     </table>
   
 
