09 - Добавила стиль-тінь

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сайт web-студія "Web-DECO"</title>
+    <style>
+        .shadowtext{
+        text-shadow: 1px 3px 2px white, 0 0 1em red;
+        color: #210042;
+        font-size: 2em;
+        }
+    </style>
 </head>
 <body background="images/bg.jpg">
     <table border="1" align="center" cellpadding="10">
@@ -80,7 +87,7 @@
 				<td colspan="2" valign="middle" height="90">Site's bottom</td>
 				<td colspan="2" valign="middle" height="90">
 					<font size="4">
-						Сайт розробила Масовець Вероніка
+						Сайт розробила Мельник Дарина
 					</font>
 				</td>
 			</tr>
